dropshot/tests/fail/bad_endpoint12.stderr
error[E0277]: the trait bound `String: HttpCodedResponse` is not satisfied
  --> tests/fail/bad_endpoint12.rs:15:6
   |
15 | ) -> Result<String, HttpError> {
   |      ^^^^^^ the trait `HttpCodedResponse` is not implemented for `String`
   |
   = help: the following other types implement trait `HttpCodedResponse`:
             HttpResponseAccepted<T>
             HttpResponseCreated<T>
             HttpResponseDeleted
             HttpResponseOk<T>
             HttpResponseUpdatedNoContent
             dropshot::handler::HttpResponseFoundStatus
             dropshot::handler::HttpResponseSeeOtherStatus
             dropshot::handler::HttpResponseTemporaryRedirectStatus
   = note: required for `String` to implement `HttpResponse`
note: required for `Result<String, HttpError>` to implement `ResultTrait`
  --> tests/fail/bad_endpoint12.rs:15:6
   |
9  | / #[endpoint {
10 | |     method = GET,
11 | |     path = "/test",
12 | | }]
   | |__- unsatisfied trait bound introduced here
...
15 |   ) -> Result<String, HttpError> {
   |        ^^^^^^
